basic html structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div id = calculator>
+        <div id = display>1+3 =4</div>
+        <div id = input field>
+            <div id = controls>
+                <div>AC</div>
+            </div>
+            <div id = numbers>
+                <div class = number>1</div>
+                <div class = number>2</div>
+                <div class = number>3</div>
+                <div class = number>4</div>
+                <div class = number>5</div>
+                <div class = number>6</div>
+                <div class = number>7</div>
+                <div class = number>8</div>
+                <div class = number>9</div>
+            </div>
+            <div id = operators>
+                <div class =operator>&divide;</div>
+                <div class =operator>&times;</div>
+                <div class =operator>-</div>
+                <div class =operator>+</div>
+                <div id = equal>=</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
