--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 </head>
 <body>
     <div id = "calculator">
-        <div id = "display">1+3 =4</div>
+        <div id = "display">1 + 3 = 4</div>
         <div id = "inputField">
             <div id = "controls">
-                <div>AC</div>
-                <div>&larr;</div> 
+                <button>AC</button>
+                <button>&larr;</button> 
             
                 <div id = "numbers">
-                    <div class = "number">1</div>
-                    <div class = "number">2</div>
-                    <div class = "number">3</div>
-                    <div class = "number">4</div>
-                    <div class = "number">5</div>
-                    <div class = "number">6</div>
-                    <div class = "number">7</div>
-                    <div class = "number">8</div>
-                    <div class = "number">9</div>
+                    <button class = "number" >1</button>
+                    <button class = "number" >2</button>
+                    <button class = "number" >3</button>
+                    <button class = "number">4</button>
+                    <button class = "number">5</button>
+                    <button class = "number">6</button>
+                    <button class = "number">7</button>
+                    <button class = "number">8</button>
+                    <button class = "number">9</button>
                 </div>
                 <div id = "operators">
-                    <div class = "operator">&divide;</div>
-                    <div class = "operator">&times;</div>
-                    <div class = "operator">-</div>
-                    <div class = "operator">+</div>
-                    <div id = "equal">=</div>
+                    <button class = "operator">&divide;</button>
+                    <button class = "operator">&times;</button>
+                    <button class = "operator">-</button>
+                    <button class = "operator">+</button>
+                    <button id = "equal">=</button>
                 </div>
             </div>
         </div>
