--- a/index.html
+++ b/index.html
@@ -8,33 +8,37 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div id = "calculator">
-        <div id = "display">1 + 3 = 4</div>
-        <div id = "inputField">
-            <div id = "controls">
-                <button>AC</button>
-                <button>&larr;</button> 
-            
-                <div id = "numbers">
-                    <button class = "number" >1</button>
-                    <button class = "number" >2</button>
-                    <button class = "number" >3</button>
-                    <button class = "number">4</button>
-                    <button class = "number">5</button>
-                    <button class = "number">6</button>
-                    <button class = "number">7</button>
-                    <button class = "number">8</button>
-                    <button class = "number">9</button>
-                </div>
-                <div id = "operators">
-                    <button class = "operator">&divide;</button>
-                    <button class = "operator">&times;</button>
-                    <button class = "operator">-</button>
-                    <button class = "operator">+</button>
-                    <button id = "equal">=</button>
+    <div id = "main">
+        <div id = "calculator">
+            <div id = "display">
+                <div class = "displayInput" id = inputDisplay>1+2</div>
+                <div class = "displayInput" id = solutionDispylay>3</div>
+            </div>
+            <div id = "inputField">
+                <div id = "controls">
+                    <button>AC</button>
+                    <button>&larr;</button> 
+                    <div id = "numbers">
+                        <button class = "number">1</button>
+                        <button class = "number">2</button>
+                        <button class = "number">3</button>
+                        <button class = "number">4</button>
+                        <button class = "number">5</button>
+                        <button class = "number">6</button>
+                        <button class = "number">7</button>
+                        <button class = "number">8</button>
+                        <button class = "number">9</button>
+                    </div>
+                    <div id = "operators">
+                        <button class = "operator">&divide;</button>
+                        <button class = "operator">&times;</button>
+                        <button class = "operator">-</button>
+                        <button class = "operator">+</button>
+                        <button id = "equal">=</button>
+                    </div>
                 </div>
             </div>
-        </div>
+    </div>
     </div>
 </body>
 </html>
