calculator input basic build, needs to be polished

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <div class = "displayInput" id = inputDisplay>1+2</div>
                 <div class = "displayInput" id = solutionDispylay>3</div>
             </div>
-            <div id = "inputField">
-                <div id = "controls">
-                    <button>AC</button>
-                    <button>&larr;</button> 
+            <div id = "controls">
+                <button>AC</button>
+                <button>&larr;</button> 
+                <div id = "inputField">
                     <div id = "numbers">
                         <button class = "number">1</button>
                         <button class = "number">2</button>
@@ -34,11 +34,13 @@
                         <button class = "operator">&times;</button>
                         <button class = "operator">-</button>
                         <button class = "operator">+</button>
-                        <button id = "equal">=</button>
                     </div>
+                    <button>0</button>
+                    <button>.</button>
+                    <button id = "equal">=</button>
                 </div>
             </div>
-    </div>
+        </div>
     </div>
 </body>
 </html>
