--- a/index.html
+++ b/index.html
@@ -15,26 +15,28 @@
                 <div class = "displayInput" id = solutionDispylay>3</div>
             </div>
             <div id = "controls">
-                <button>AC</button>
-                <button>&larr;</button> 
-                <div id = "inputField">
-                    <div id = "numbers">
-                        <button class = "number">1</button>
-                        <button class = "number">2</button>
-                        <button class = "number">3</button>
-                        <button class = "number">4</button>
-                        <button class = "number">5</button>
-                        <button class = "number">6</button>
-                        <button class = "number">7</button>
-                        <button class = "number">8</button>
-                        <button class = "number">9</button>
-                    </div>
-                    <div id = "operators">
-                        <button class = "operator">&divide;</button>
-                        <button class = "operator">&times;</button>
-                        <button class = "operator">-</button>
-                        <button class = "operator">+</button>
-                    </div>
+                <div id = "calculatorTop">
+                    <button>AC</button>
+                    <button>&larr;</button> 
+                </div>
+                <div id = "numbers">
+                    <button class = "number">1</button>
+                    <button class = "number">2</button>
+                    <button class = "number">3</button>
+                    <button class = "number">4</button>
+                    <button class = "number">5</button>
+                    <button class = "number">6</button>
+                    <button class = "number">7</button>
+                    <button class = "number">8</button>
+                    <button class = "number">9</button>
+                </div>
+                <div id = "operators">
+                    <button class = "operator">&divide;</button>
+                    <button class = "operator">&times;</button>
+                    <button class = "operator">-</button>
+                    <button class = "operator">+</button>
+                </div>
+                <div id ="calculatorBottom">
                     <button>0</button>
                     <button>.</button>
                     <button id = "equal">=</button>
