--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
                     <button>AC</button>
                     <button>&larr;</button> 
                 </div>
-                <div id = "numbers">
-                    <button class = "number">1</button>
-                    <button class = "number">2</button>
-                    <button class = "number">3</button>
-                    <button class = "number">4</button>
-                    <button class = "number">5</button>
-                    <button class = "number">6</button>
-                    <button class = "number">7</button>
-                    <button class = "number">8</button>
-                    <button class = "number">9</button>
-                </div>
-                <div id = "operators">
-                    <button class = "operator">&divide;</button>
-                    <button class = "operator">&times;</button>
-                    <button class = "operator">-</button>
-                    <button class = "operator">+</button>
+                <div id = "calculatorMiddle">
+                    <div id = "numbers">
+                        <button class = "number">1</button>
+                        <button class = "number">2</button>
+                        <button class = "number">3</button>
+                        <button class = "number">4</button>
+                        <button class = "number">5</button>
+                        <button class = "number">6</button>
+                        <button class = "number">7</button>
+                        <button class = "number">8</button>
+                        <button class = "number">9</button>
+                    </div>
+                    <div id = "operators">
+                        <button class = "operator">&divide;</button>
+                        <button class = "operator">&times;</button>
+                        <button class = "operator">-</button>
+                        <button class = "operator">+</button>
+                    </div>
                 </div>
                 <div id ="calculatorBottom">
                     <button>0</button>
