--- a/index.html
+++ b/index.html
@@ -20,16 +20,23 @@
                     <button>&larr;</button> 
                 </div>
                 <div id = "calculatorMiddle">
-                    <div id = "numbers">
-                        <button class = "number">1</button>
-                        <button class = "number">2</button>
-                        <button class = "number">3</button>
-                        <button class = "number">4</button>
-                        <button class = "number">5</button>
-                        <button class = "number">6</button>
-                        <button class = "number">7</button>
-                        <button class = "number">8</button>
-                        <button class = "number">9</button>
+                    <div>
+                        <div id = "numbers">
+                            <button class = "number">1</button>
+                            <button class = "number">2</button>
+                            <button class = "number">3</button>
+                            <button class = "number">4</button>
+                            <button class = "number">5</button>
+                            <button class = "number">6</button>
+                            <button class = "number">7</button>
+                            <button class = "number">8</button>
+                            <button class = "number">9</button>
+                        </div>
+                        <div id ="calculatorBottom">
+                            <button>0</button>
+                            <button>.</button>
+                            <button id = "equal">=</button>
+                        </div>
                     </div>
                     <div id = "operators">
                         <button class = "operator">&divide;</button>
@@ -38,11 +45,7 @@
                         <button class = "operator">+</button>
                     </div>
                 </div>
-                <div id ="calculatorBottom">
-                    <button>0</button>
-                    <button>.</button>
-                    <button id = "equal">=</button>
-                </div>
+               
             </div>
         </div>
     </div>
