--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <div id = "calculatorMiddle">
                     <div>
                         <div id = "numbers">
+                            <button class = "number">0</button>
+                            <button class = "number">.</button>
+                            <button class = "number" id = "equal">=</button>
                             <button class = "number">1</button>
                             <button class = "number">2</button>
                             <button class = "number">3</button>
@@ -31,12 +34,7 @@
                             <button class = "number">7</button>
                             <button class = "number">8</button>
                             <button class = "number">9</button>
-                        </div>
-                        <div id ="calculatorBottom">
-                            <button>0</button>
-                            <button>.</button>
-                            <button id = "equal">=</button>
-                        </div>
+                        </div>   
                     </div>
                     <div id = "operators">
                         <button class = "operator">&divide;</button>
