--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <div id = "numbers">
                             <button class = "number">0</button>
                             <button class = "number">.</button>
-                            <button class = "number" id = "equal">=</button>
+                            <button id = "equal">=</button>
                             <button class = "number">1</button>
                             <button class = "number">2</button>
                             <button class = "number">3</button>
