--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div>
                         <div id = "numbers">
                             <button class = "number">0</button>
-                            <button class = "number">.</button>
+                            <button id = "dot">.</button>
                             <button id = "equal">=</button>
                             <button class = "number">1</button>
                             <button class = "number">2</button>
