display the dynamic number and operator

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id = "main">
         <div id = "calculator">
             <div id = "display">
-                <div class = "displayInput" id = inputDisplay>1+2</div>
+                <div class = "displayInput" id = inputDisplay></div>
                 <div class = "displayInput" id = solutionDisplay>3</div>
             </div>
             <div id = "controls">
