removed fixed solution display

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id = "calculator">
             <div id = "display">
                 <div class = "displayInput" id = inputDisplay></div>
-                <div class = "displayInput" id = solutionDisplay>3</div>
+                <div class = "displayInput" id = solutionDisplay></div>
             </div>
             <div id = "controls">
                 <div id = "calculatorTop">
