rename some variables added a variable for each operator

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         </div>   
                     </div>
                     <div id = "operators">
-                        <button class = "operator">&divide;</button>
-                        <button class = "operator">&times;</button>
-                        <button class = "operator">-</button>
-                        <button class = "operator">+</button>
+                        <button class = "operatorDivide">&divide;</button>
+                        <button class = "operatorTimes">&times;</button>
+                        <button class = "operatorSubstract">-</button>
+                        <button class = "operatorAdd">+</button>
                     </div>
                 </div>
                
