updated operator variable with button click

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         </div>   
                     </div>
                     <div id = "operators">
-                        <button class = "operatorDivide">&divide;</button>
-                        <button class = "operatorTimes">&times;</button>
-                        <button class = "operatorSubstract">-</button>
-                        <button class = "operatorAdd">+</button>
+                        <button id = "operatorDivide">&divide;</button>
+                        <button id = "operatorTimes">&times;</button>
+                        <button id = "operatorSubstract">-</button>
+                        <button id = "operatorAdd">+</button>
                     </div>
                 </div>
                
