added AC function

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
             <div id = "controls">
                 <div id = "calculatorTop">
-                    <button class = "deleteButton">AC</button>
-                    <button class = "deleteButton">&larr;</button> 
+                    <button class = "deleteButton" id = "acButton">AC</button>
+                    <button class = "deleteButton" id = "backButton">&larr;</button> 
                 </div>
                 <div id = "calculatorMiddle">
                     <div>
